<resources>

    <string name="app_name">電影窩</string>
    
    <string name="title">標題</string>
    <string name="editor_choice">每日編輯精選</string>
    <string name="topic">精選主題</string>

    <!-- listview news content -->
    <string name="news_lv_source">來源</string>
    <string name="news_lv_date">張貼日期</string>
    <string name="news_lv_comment">內容</string>
    
    <!-- Share -->
    <string name="share">分享</string>
    
    <!-- news content -->
    <string name="news_content_source">來源</string>
    <string name="news_content_date">張貼日期</string>
    <string name="news_content_comment">內容</string>
    <string name="news_content_advice_video">推薦影片</string>
    
    <!-- facebook -->
    <string name="fb_login_description">請登入Facebook分享內容</string>
    <string name="fb_login">Facebook 登入</string>
    <string name="fb_login_success">Facebook 登入成功</string>
    <string name="fb_login_failed">Facebook 登入失敗</string>
    <string name="fb_share">Facebook 分享</string>
    <string name="fb_share_success">Facebook分享成功</string>
    <string name="fb_share_cancel">Facebook分享取消</string>
    <string name="fb_share_failed">Facebook分享失敗</string>
    <string name="fb_share_failed_again">Facebook分享失敗 請再分享一次</string>
    <string name="sharing">等待中…</string>
    <string name="applicationId">144757872370903</string>
    
    <!-- about us -->
    <string name="about_us">關於我們</string>
    <string name="reader_submit">作家投稿</string>
    <string name="advice_and_feedback">建議回饋</string>
    <string name="facebook">FB粉絲團</string>
    <string name="liability_disclaimer">免責聲明</string>
    <string name="clear">清除緩衝</string>
    <string name="confirm">確定</string>    
    <string name="aboutapp_declare">電影窩為JumpLife所開發之電影新聞軟體，目的在於彙整及分享電影相關資訊，
            豐富網路文化。而新聞及影片來源取自於網路上各新聞媒體，Jumplife僅持有軟體本身著作權。
      &lt;br /&gt; &lt;br /&gt; 本APP所有文章、影片、圖片之著作權皆為原創作人所擁有請勿複製使用，以免侵犯第三人權益，
            任何單位或個人認為本APP或本APP連結內容可能涉嫌侵犯其合法權益，應該及時向本網站APP回饋，並詳細侵權情況，
            本APP在收到上述文件後，將會儘快移除被控侵權的內容或連結。</string>
    <string name="clear_finish">清除緩衝完成</string>
    
    <!-- tablet -->
    <string name="aboutapp">關於電影窩</string>
    <string name="aboutapp_intro">電影窩 - 最貼近你的媒體，時間就應該窩在美好的電影事物上，電影窩彙整世界各地電影的精彩時刻，把一切濃縮於掌中，讓電影融入你的每日生活，盡情發掘與分享電影的美好。
有喜歡的電影新聞、圖片，透過"作家投稿"寄給我們，讓每個窩在電影窩的朋友可以獲得更多樂趣！</string>
    <string name="aboutus_other_func">建議回饋與爆料</string>
    <string name="aboutus_other_productor">其他產品</string>
    
    
    <!-- promotion -->
    <string name="go">前往</string>
    
    
    <!-- adwhirl -->
	<string name="app_picker_name">Applications</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
  	<string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
  	<string name="msg_default_contents">Contents</string>
  	<string name="msg_default_format">Format</string>
  	<string name="msg_default_meta">Metadata</string>
  	<string name="msg_default_mms_subject">Place a barcode inside the viewfinder rectangle to scan it.</string>
  	<string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
  	<string name="msg_default_time">Time</string>
  	<string name="msg_default_type">Type</string>
  	<string name="msg_encode_barcode_failed">Could not generate the requested barcode.</string>
  	<string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
  	<string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
  	<string name="msg_loading_apps">Loading list of applications\u2026</string>
  	<string name="msg_not_our_results">You are leaving this application. The search results you will see are not related to this application.</string>
  	<string name="msg_redirect">Redirect</string>
  	<string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
  	<string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
  	<string name="msg_sbc_no_page_returned">No page returned</string>
  	<string name="msg_sbc_page">Page</string>
  	<string name="msg_sbc_searching_book">Searching book\u2026</string>
  	<string name="msg_sbc_snippet_unavailable">Snippet not available</string>
  	<string name="msg_sbc_unknown_page">Unknown page</string>
  	<string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
  	<string name="msg_share_subject_line">Here are the contents of a barcode I scanned</string>
  	<string name="msg_share_text">Or type some text and press Enter</string>
  	<string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
  	
  	<!-- ad key -->
    <string name="hodo_key">5147dd762aa</string>
    <string name="adwhirl_key">51927cddc60b4495b9319880462ab988</string>
    <string name="adwhirl_tablet_key">8350d6af1895470d8b93f2112749feec</string>
    
  	
</resources>