<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2012 Facebook

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/facebook_login_background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:background="@drawable/facebook_login_title_background" >
            <ImageView
                android:id="@+id/splash_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/app_icon_margin"
                android:gravity="center"
                android:src="@drawable/ic_launcher" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/fb_login_text_size"
                android:typeface="sans"
                android:textStyle="bold"
                android:text="@string/app_name" />
        </LinearLayout>

        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="@dimen/fb_login_text_size"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:textColor="@color/black"
	        android:textSize="@dimen/fb_login_text_size"
	        android:text="@string/fb_login_description" />

        <com.facebook.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/fb_login_text_size"
            android:gravity="left"
            android:text="@string/fb_login" />

    </LinearLayout>
</ScrollView>
