<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.jumplife.movienews"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    <include android:id="@+id/topbar" layout="@layout/topbar"
        android:layout_alignParentTop="true" />
    
    <ImageButton
        android:id="@+id/ib_about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/topbar"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/topbar"
        android:padding="@dimen/item_board"
        android:background="@drawable/imagebutton_topbar_background"
        android:scaleType="fitCenter"
        android:src="@drawable/imagebutton_about_us" />
    
    <ImageButton
        android:id="@+id/ib_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/topbar"
        android:layout_toLeftOf="@+id/ib_about_us"
        android:layout_alignTop="@+id/topbar"
        android:padding="@dimen/item_board"
        android:background="@drawable/imagebutton_topbar_background"
        android:scaleType="fitCenter"
        android:src="@drawable/imagebutton_share_source" />

    <ScrollView 
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_below="@+id/topbar"
        android:paddingRight="@dimen/news_content_board_rl"
        android:paddingLeft="@dimen/news_content_board_rl" >
        <LinearLayout android:id="@+id/ll_newscontent" 
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >
            <TextView android:id="@+id/tv_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="@dimen/news_content_board_top"
                android:paddingBottom="@dimen/news_content_board_bottom"
                android:paddingRight="@dimen/news_content_board_rl"
                android:paddingLeft="@dimen/news_content_board_rl"
                android:textSize="@dimen/news_content_name"
                android:textColor="@color/black"
                android:text="@string/title" />
            <RelativeLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/news_content_board_bottom"
                android:paddingRight="@dimen/news_content_board_rl"
                android:paddingLeft="@dimen/news_content_board_rl"
                android:orientation="horizontal" >
                <TextView android:id="@+id/tv_source"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
	                android:textSize="@dimen/news_content_source"
	                android:textColor="@color/news_content_source_date_color"
	                android:text="@string/news_content_source" />
                <TextView android:id="@+id/tv_date"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:textSize="@dimen/news_content_date"
	                android:textColor="@color/news_content_source_date_color"
	                android:text="@string/news_content_date" />
            </RelativeLayout>
            <View 
                android:layout_width="fill_parent"
                android:layout_height="@dimen/news_content_seperate"
                android:background="@color/news_content_source_date_color"
                android:layout_marginLeft="@dimen/news_content_board_rl"
                android:layout_marginRight="@dimen/news_content_board_rl" /> 
            <WebView
		        android:id="@+id/webview_pic"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:background="@color/white" />           
        </LinearLayout>    
    </ScrollView>
    <View android:id="@+id/view_overhead"        
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_below="@+id/topbar"
        android:background="@color/transparent30"
        android:visibility="invisible"/>
    <com.jumplife.adapter.WrapSlidingDrawer 
        android:id="@+id/sd_video"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        android:handle="@+id/handle"
        android:content="@+id/content" >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/handle">
            <View 
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_alignBottom="@+id/iv_handle"
                android:layout_marginBottom="3dp"
                android:background="@color/main_color_orange" />
            <View 
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_alignBottom="@+id/iv_handle"
                android:background="@color/background" />
	        <ImageView android:id="@+id/iv_handle"
	            android:layout_width="wrap_content"
	            android:layout_height="@dimen/news_content_handler_size"
                android:layout_alignBottom="@+id/iv_handle"
                android:layout_centerHorizontal="true"
	            android:src="@drawable/handler_up"
	            android:scaleType="fitCenter" />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:background="@color/background" >
            <LinearLayout android:id="@+id/ll_feature"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	            <RelativeLayout android:id="@+id/rl_indicator"
	               android:layout_height="wrap_content"
                   android:layout_width="fill_parent"
                   android:layout_margin="@dimen/news_content_video_board" >	                
	               <com.viewpagerindicator.CirclePageIndicator
	                   android:id="@+id/indicator"
	                   android:layout_height="wrap_content"
	                   android:layout_width="fill_parent"
	                   android:padding="@dimen/news_content_Indicator_board"
	                   app:radius="@dimen/news_content_Indicator_radius"
	                   app:strokeWidth="0dp"
                       app:fillColor="@color/main_color_orange"
	                   app:pageColor="@color/grey" />
	               </RelativeLayout>
	           <RelativeLayout android:id="@+id/rl_viewpager"
                   android:layout_height="wrap_content"
                   android:layout_width="fill_parent" >
	               <android.support.v4.view.ViewPager
	                   android:id="@+id/pager"
	                   android:layout_width="fill_parent"
	                   android:layout_height="wrap_content" />
	               </RelativeLayout>
	            </LinearLayout>
        </RelativeLayout>
    </com.jumplife.adapter.WrapSlidingDrawer>
    
    <ProgressBar android:id="@+id/pb_news_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
    
    <ImageButton android:id="@+id/refresh"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/topbar"
        android:scaleType="fitCenter"
        android:visibility="gone"
        android:background="@drawable/button_background"
        android:src="@drawable/renew"/>
    </RelativeLayout>